recursion.logo.lessons.recursion.logo.sierpinski.Sierpinski.scala.error
Sierpinski:1: error: not found: value levels
  if (levels==0){
      ^Sierpinski:8: error: not found: value sierpsinski
    sierpsinski()
    ^