recursion.logo.lessons.recursion.logo.sierpinski.Sierpinski.scala.code
def sierpinski(level:Int, length:Double) {
  if (levels==0){
    for (k<-0 to 2){
    avance(length)
      droite(60)
    }
  }
  else{
    sierpsinski()
    
  }
}